Added auth (#5)
